<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String de la aplicación -->
    <string name="app_name">GtGrafía</string>
    <string name="hello_world">Ibara Mayaka!</string>
    <string name="dev_andrea">Andrea Alejandra González Vides</string>
    <string name="dev_julio">Julio César Osorio Boror</string>
    
    <string name="gt_font">fonts/Cheveuxdange.ttf</string>

    <!-- String de las actividades -->
    <string name="title_activity_start">¡Bienvenido!</string>
    <string name="title_activity_acerca">Acerca de</string>
    <string name="title_activity_usuario">Usuarios</string>
    <string name="title_activity_nivel">Niveles</string>
    <string name="title_activity_leccion">Lección</string>
    <string name="title_activity_evaluacion">Evaluación</string>
    <string name="title_activity_pregunta">Pregunta</string>
    
    <!-- Mensajes -->
    <string name="msg_usuario_registrado">¡Usuario registrado!</string>
    <string name="msg_ingrese_nombre">¡Ingrese un nombre!</string>
    <string name="msg_punteo">¡Punteo de la evaluación: </string>
    <string name="msg_respuesta_correcta">¡Respuesta correcta!</string>
    <string name="msg_respuesta_incorrecta">¡Respuesta incorrecta!</string>
    <string name="msg_evaluacion_terminada">¡Siguiente nivel activado!</string>
    <string name="msg_evaluacion_deshabilitada">Aun no puede realizar esta evaluación</string>
    
    <!-- String de StartActivity -->
    <string name="text_iniciar_juego">Iniciar Juego</string>
    <string name="text_acerca_de">Acerca de</string>

    <!-- String de AcercaActivity -->
    <string name="text_dev">Desarrolladores:</string>
    
    <!-- String de UsuarioActivity -->
    <string name="text_configuracion">Configuración</string>
    <string name="text_nuevo_usuario">Nuevo usuario:</string>
    <string name="text_viejo_usuario">Usuario registrado:</string>
    <string name="text_enviar_usuario">Enviar</string>
    <string name="hint_nuevo_usuario">Usuario</string>

    <!-- String de PreguntaActivity -->
    <string name="text_enviar_pregunta">Enviar</string>    
    <string name="hint_respuesta">Respuesta</string>

    <!-- String de LeccionActivity -->
    <string name="text_leer_leccion">Leer Lección</string>
    <string name="text_evaluar_leccion">¡Evaluar Nivel!</string>
    <string name="text_leccion">Lección del nivel:</string>

    <!-- String de EvaluacionActivity -->
    <string name="text_iniciar_evaluacion">¡Iniciar!</string>
    <string name="text_leer_evaluacion">Evaluación:</string>
    <string name="text_avance_evaluacion">Avance de la evaluación:</string>

    <!-- String de menu_opciones -->
    <string name="str_inicio">Inicio</string>
    <string name="str_evaluacion">Evaluación</string>
    <string name="str_salir">Salir</string>

</resources>
