<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relativeView"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textAplicacionStart"
        style="@style/textAplicacion"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/textTituloStart"
        style="@style/textTitulo"
        android:layout_below="@+id/textAplicacionStart"
        android:text="@string/title_activity_start" />
    
    <TableLayout
        style="@style/tableLayout"
        android:layout_below="@+id/textTituloStart" >
        
        <TableRow>
            
        	<ImageView
            	android:id="@+id/imageIniciarStart"
            	style="@style/imageItem" 
            	android:onClick="iniciarJuego"
            	android:contentDescription="@string/text_iniciar_juego" />
        	
        	<ImageView
            	android:id="@+id/imageAcercaStart"
            	style="@style/imageItem"
            	android:onClick="iniciarAcercaDe"
            	android:contentDescription="@string/text_acerca_de" />
        	
        </TableRow> 
            
        <TableRow>   
                     
            <TextView
		        android:id="@+id/textIniciarStart"
		        style="@style/textItem"	
		        android:onClick="iniciarJuego"
		        android:text="@string/text_iniciar_juego" />
		    
		    <TextView
		        android:id="@+id/textAcercaStart"
		        style="@style/textItem"
		        android:onClick="iniciarAcercaDe"
		        android:text="@string/text_acerca_de" />     
		               
        </TableRow>
        
   	</TableLayout>

</RelativeLayout>
