<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relativeView"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textAplicacionLeccion"
        style="@style/textAplicacion"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/textTituloLeccion"
        style="@style/textTitulo"
        android:layout_below="@+id/textAplicacionLeccion"
        android:text="@string/title_activity_leccion" />

    <TextView
        android:id="@+id/textNombreLeccion"
        style="@style/textTexto"
        android:layout_below="@+id/textTituloLeccion" />
    
    <TableLayout
        style="@style/tableLayout"
        android:layout_below="@+id/textNombreLeccion" >
        
        <TableRow>
            
        	<ImageView
            	android:id="@+id/imageLeerLeccion"
            	style="@style/imageItem" 
            	android:onClick="leerLeccion"
            	android:contentDescription="@string/text_leer_leccion" />
        	
        	<ImageView
            	android:id="@+id/imageEvaluarLeccion"
            	style="@style/imageItem"
            	android:onClick="abrirEvaluacion"
            	android:contentDescription="@string/text_evaluar_leccion" />
        	
        </TableRow> 
            
        <TableRow>   
                     
            <TextView
		        android:id="@+id/textLeerLeccion"
		        style="@style/textItem"	
		        android:onClick="leerLeccion"
		        android:text="@string/text_leer_leccion" />
		    
		    <TextView
		        android:id="@+id/textEvaluarLeccion"
		        style="@style/textItem"
		        android:onClick="abrirEvaluacion"
		        android:text="@string/text_evaluar_leccion" />     
		               
        </TableRow>
        
   	</TableLayout>

</RelativeLayout>
